# copperdb

./: Cargo.toml  DESIGN.md  README.md
proptest-regressions/: property_tests.txt
scripts/: bench-sweep.py
src/: db.rs  engine.rs  lib.rs  main.rs  property_tests.rs  server.rs  stress_tests.rs  versioning.rs  wal.rs
src/compaction/: mod.rs
src/core/: merge.rs  mod.rs  storage.rs
src/engine/: mod.rs  property_tests.rs  scan.rs
src/flusher/: mod.rs
src/manifest/: mod.rs
src/memtable/: mod.rs  state.rs
src/sstable/: DESIGN.md  block.rs  iter.rs  mod.rs  reader.rs  writer.rs
src/versioning/: guard.rs  manifest.rs  mod.rs  state.rs
workloads/: README.md  ycsb-a.toml  ycsb-b.toml  ycsb-c.toml  ycsb-d.toml  ycsb-e.toml  ycsb-f.toml
