[package]
name = "copperdb"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
crossbeam-skiplist = "0.1.3"
crc32fast = "1"
bloomfilter = "3.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
axum = "0.8"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
